# lego_sorting

./: .gitignore  README.md  class_to_idx.json  lego-bricks-image-analysis.ipynb  main.ipynb  pyproject.toml
lego_classifier/: cli.py  data.py  data_handling.py  data_preparation.py  dataset.py  fileio.py  inference.py  lego_dataset.py  model_engine.py  models.py  train.py  training.py  transforms.py  utils.py  validate.py
notebooks/: error_analysis.ipynb  main.ipynb
src/lego_classifier/: transforms.py
tests/unit/: test_cli.py
