[project]
name = "lego-classifier"
version = "0.1.0"
description = "Image classification of lego bricks"

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torch (>=2.7.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lego-classifier = "lego_classifier.cli:app"